syntax = "proto3";

option java_multiple_files = true;
option java_package = "ua.logistics.fleet.grpc";

package fleet;

service FleetService {
  rpc CheckVehicleAvailability(VehicleAvailabilityRequest) returns (VehicleAvailabilityResponse);
  rpc ReserveVehicle(ReserveVehicleRequest) returns (ReserveVehicleResponse);
}

message VehicleAvailabilityRequest {
  double min_capacity = 1;
}

message VehicleAvailabilityResponse {
  bool available = 1;
  int64 vehicle_id = 2;
  string vehicle_type = 3;
  double capacity = 4;
}

message ReserveVehicleRequest {
  int64 vehicle_id = 1;
  int64 shipment_id = 2;
}

message ReserveVehicleResponse {
  bool success = 1;
  string message = 2;
  int64 vehicle_id = 3;
}